@@ -1,0 +1,9 @@
+Title: BI: now rules can easily be copied and deactivate temporarily
+Level: 1
+Component: bi
+Compatible: compat
+Version: 1.4.0i1
+Date: 1473692330
+Class: feature
+
+
