@@ -625,6 +625,7 @@
     * 3396 Change default setting of Precompile aggregations on demand to ON now...
     * 3449 The host alias can now be used in BI aggregates...
     * 3546 Drastically sped up response time on querying single aggregations...
+    * 3873 BI: now rules can easily be copied and deactivate temporarily
     * 3247 FIX: Do not allow multiple BI aggregates with the same title...
     * 3232 FIX: BI: Only querying site of host for specific host status info...
     * 3291 FIX: Improved error handling when searching for BI aggregations with invalid regex
